Added functionality to update warehouse from the website

--- a/client/inventory-management-v1/src/styles.css
+++ b/client/inventory-management-v1/src/styles.css
@@ -1,56 +1,90 @@
 /* styles.css */
 :root {
-    --primary-color: #007bff;
-    --secondary-color: #6c757d;
-    --light-color: #f8f9fa;
-    --dark-color: #343a40;
-  }
-  
-  body {
-    background-color: var(--light-color);
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    color: var(--dark-color);
-  }
-  
-  .navbar {
-    background-color: var(--primary-color);
-    color: var(--light-color);
-  }
-  
-  .custom-card {
-    background-color: var(--light-color);
-    border: 1px solid var(--secondary-color);
-    border-radius: 5px;
-    padding: 1rem;
-    margin-bottom: 1rem;
-  }
-  
-  .custom-table {
-    background-color: var(--light-color);
-  }
-  
-  .custom-table th {
-    background-color: var(--primary-color);
-    color: var(--light-color);
-  }
-  
-  .custom-table tbody tr:nth-child(even) {
-    background-color: var(--secondary-color);
-  }
-  
-  .custom-table td {
-    color: var(--dark-color);
-  }
+  --primary-color: #007bff;
+  --secondary-color: #6c757d;
+  --light-color: #f8f9fa;
+  --dark-color: #343a40;
+}
 
-  .custom-button {
-    background-color: var(--primary-color);
-    border-color: var(--primary-color);
-  }
+body {
+  background-color: var(--light-color);
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: var(--dark-color);
+}
+
+.navbar {
+  background-color: var(--primary-color);
+  color: var(--light-color);
+}
+
+.custom-card {
+  background-color: var(--light-color);
+  border: 1px solid var(--secondary-color);
+  border-radius: 5px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+.custom-table {
+  background-color: var(--light-color);
+}
+
+.custom-table th {
+  background-color: var(--primary-color);
+  color: var(--light-color);
+}
+
+.custom-table tbody tr:nth-child(even) {
+  background-color: var(--secondary-color);
+}
+
+.custom-table td {
+  color: var(--dark-color);
+}
+
+.custom-button {
+  background-color: var(--primary-color);
+  border-color: var(--primary-color);
+  margin-top: 1rem;
+}
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+-webkit-appearance: none;
+margin: 0;
+}
+
+
+
+/* AddWarehouseModal.css */
+.modal-content {
+  background-color: var(--light-color);
+  color: var(--dark-color);
+}
+
+.modal-header {
+  background-color: var(--primary-color);
+  color: var(--light-color);
+}
+
+.modal-title {
+  color: var(--light-color);
+}
+
+
+.modal-footer {
+  padding: 1rem;
+}
+
+
+.modal-body {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group {
+  margin-bottom: 1rem;
 }
