--- a/client/inventory-management-v1/src/styles.css
+++ b/client/inventory-management-v1/src/styles.css
@@ -103,3 +103,20 @@ margin: 0;
 .input-container input[type="text"] {
   margin-right: 8px; 
 }
+
+.items-container {
+  display: flex;
+}
+
+.items-table {
+  flex: 1; 
+}
+
+.additional-info {
+  flex: 1; 
+  padding: 1rem; 
+  background-color: #f8f9fa; 
+  margin-left: 1rem; 
+  border-left: 1px solid #ccc; 
+
+}
