added functionality to edit and delete inventory from item page

--- a/client/inventory-management-v1/src/styles.css
+++ b/client/inventory-management-v1/src/styles.css
@@ -48,6 +48,10 @@ h1, h2, h3, h4, h5, h6 {
   background-color: var(--primary-color);
   border-color: var(--primary-color);
   margin-top: 1rem;
+  margin-right: 8px;
+}
+.button-margin{
+  margin-right: 8px;
 }
 
 input::-webkit-outer-spin-button,
